# NoFap_project

./: .gitignore  LICENSE  celerybeat-schedule.dir  manage.py  pyproject.toml  requirements.txt
Core_app/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
Core_app/components/: root.py
Core_app/migrations/: 0001_initial.py  0002_remove_dia_name_dia_estado.py  0003_alter_dia_estado.py  0004_alter_dia_estado.py  0005_alter_dia_estado.py  0006_alter_dia_estado.py  0007_alter_dia_estado.py  0008_setembro.py  0009_alter_dia_estado.py  0010_alter_dia_estado.py  0011_dia_dia_alter_setembro_dia.py  0012_remove_setembro_dia_dia_mes.py  0013_alter_dia_estado.py  0014_setembro_geral.py
Core_app/static/css/: navbarStyle.css
Core_app/templates/Core_app/: index.html
Core_app/templates/account/: base.html  login.html  logout.html  profile.html  signup.html
Core_app/templates/unicorn/: navbar.html  root.html
Core_app/templatetags/: utils.py
NoFap_project/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
