[tool.poetry]
name = "nofap-project"
version = "0.1.0"
description = "Refazendo o projeto de breno"
authors = ["Rip4568 <63131796+Rip4568@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "nofap_project"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.3"
django-unicorn = "^0.49.2"
whitenoise = "^6.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
